k8s/bencloud-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bencloud-server
  namespace: benmap-dev
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bencloud-server

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: bencloud-server
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    spec:
      securityContext:
        runAsUser: 555
        runAsGroup: 555
        fsGroup: 555
      containers:
      - name: api
        image:  registry.epa.gov/benmap/bencloudserver/bencloudserver:$CI_COMMIT_SHORT_SHA
        imagePullPolicy: Always
        livenessProbe:
         tcpSocket:
            port: 4567
         initialDelaySeconds: 10
         periodSeconds: 15
        startupProbe:
          tcpSocket:
            port: 4567
          failureThreshold: 30
          periodSeconds: 10
        ports:
        - containerPort: 4567
      imagePullSecrets:
      - name: glcr-auth

---

apiVersion: v1
kind: Service
metadata:
  name: bencloud-server-service
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 4567
  selector:
    app: bencloud-server

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bencloudapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
#   nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: dev.bencloud-dev.aws.epa.gov
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
           service:
            name: bencloud-server-service
            port: 
             number: 443
