k8s/bencloud-stage-server.yml
apiVersion: v1
kind: Service
metadata:
  name: bencloud-server-service
  namespace: benmap-stg
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 4567
  selector:
    app: bencloud-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bencloud-server
  namespace: benmap-stg
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: bencloud-server

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: bencloud-server
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    spec:
      securityContext:
        runAsUser: 555
        runAsGroup: 555
        fsGroup: 555
      containers:
      - name: api
        image:  registry.epa.gov/benmap/bencloudserver/bencloudserver/app-defender:$CI_COMMIT_TAG
        imagePullPolicy: Always
        resources:
         requests:
          memory: 24G
          cpu: 8
        volumeMounts:
          - name: bencloud-server
            mountPath: /app-data
        livenessProbe:
         tcpSocket:
            port: 4567
         initialDelaySeconds: 10
         periodSeconds: 15
        startupProbe:
          tcpSocket:
            port: 4567
          failureThreshold: 30
          periodSeconds: 10
        ports:
        - containerPort: 4567
      imagePullSecrets:
      - name: glcr-auth
      volumes:
        - name: bencloud-server
          persistentVolumeClaim:
            claimName: bencloud-server-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bencloudserver-ingress
  namespace: benmap-stg
  annotations:
    kubernetes.io/ingress.class: "nginx"
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "1"
spec:
  tls:
    - hosts:
        - stg.bencloud-stage.aws.epa.gov
      secretName: bencloud-tls-secret
  rules:
    - host: stg.bencloud-stage.aws.epa.gov
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
           service:
            name: bencloud-server-service
            port: 
             number: 443
